--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,6 +44,9 @@ footer nav ul li a {
     color: #ffff;
     text-decoration: none;
     font-size: 1.5rem;
+    font-family: "Lalezar", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 
 footer nav ul li a:visited {
