--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,3 +49,54 @@ footer nav ul li a {
 footer nav ul li a:visited {
     color: #ffff;
 }
+
+main{
+    background-color: #C0CAD4;
+}
+
+.main-text{
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+    font-weight: 500;
+}
+
+.grid-container{
+    gap: 2.5rem;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: 250px 250px;
+    padding: 2rem;
+}
+
+.game{
+    font-size: 1.3rem;
+    display: flex;
+    border: solid #FFA899 2px;
+    border-radius: 0.5rem;
+    background-color: #D9D9D9;
+}
+
+.game:first-child{
+    grid-column: 1;
+    grid-row: 1;
+}
+.game:nth-child(2){
+    grid-column: 2;
+}
+
+.game:nth-child(3){
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.game:nth-child(4){
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.game-text{
+    align-self: center;
+    margin: auto; /*center text*/
+}
