--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,6 +62,11 @@ footer nav ul li a:hover{
     font-weight: 600;
 }
 
+/* HEADER */
 header {
-    background-color: white;
+    background-color: #448067;
+    display: flex;
+}
+.logo-container {
+    
 }
