--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,3 +123,9 @@ header {
 .logo-container {
     
 }
+
+@media screen and (max-width: 700px) {
+    footer nav ul {
+        flex-direction: column;
+    }
+}
