--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,6 +120,7 @@ header {
     background-color: #448067;
     display: flex;
     justify-content: space-between;
+		height: 100px;
 }
 .logo-container {
     
@@ -128,6 +129,7 @@ header {
     display: inline-block;
     text-decoration: none;
     font-family: "Luckiest Guy";
+		font-size: 1.7rem;
 }
 .logo-text-tool {
     color: #262626;
@@ -135,6 +137,12 @@ header {
 .logo-text-box {
     margin-left: -4px;
     color: #FFA899;
+}
+header nav ul li a{
+	text-decoration: none;
+}
+header nav ul li {
+	display: inline-block;
 }
 
 @media screen and (max-width: 700px) {
