--- a/CSS/style.css
+++ b/CSS/style.css
@@ -169,7 +169,7 @@ header nav ul li:hover {
 	z-index: 999;
 	background-color: #448067;
 	box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
-	display: flex;
+	display: none;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-start;
@@ -181,10 +181,19 @@ header nav ul li:hover {
 .sidebar a{
 	width: 100%;
 }
+.menu-button{
+	display: none;
+}
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 700px) {
     footer nav ul {
         flex-direction: column;
     }
+		.hideOnMobile{
+			display: none;
+		}
+		.menu-button{
+			display: block;
+		}
 }
