--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body {
+    background-color: #C0CAD4;
+}
+
 /* fonts */
 
 .lalezar-regular {
@@ -21,6 +25,7 @@
     font-style: normal;
 }
 
+/* FOOTER */
 
 footer {
     max-height: 20rem;
@@ -51,8 +56,15 @@ footer nav ul li a:visited {
     color: #ffff;
 }
 
-body{
-    background-color: #C0CAD4;
+footer nav ul li a:hover {
+    transform: scale(1.1);
+    transition: .4s;
+}
+
+.active {
+    border-bottom: 3px solid black;
+    font-size: 1.7rem;
+    font-weight: 600;
 }
 
 .main-text{
@@ -107,17 +119,6 @@ body{
 .game-text{
     align-self: center;
     margin: auto; /*center text*/
-}
-
-footer nav ul li a:hover{
-    transform: scale(1.1);
-    transition: .4s;
-}
-
-.active {
-    border-bottom: 3px solid black;
-    font-size: 1.7rem;
-    font-weight: 600;
 }
 
 /* HEADER */
