--- a/CSS/quiz/quiz-style.css
+++ b/CSS/quiz/quiz-style.css
@@ -45,12 +45,17 @@
     font-size: 1.3rem;
     width: 70px;
     text-align: center;
-   
 }
 
 .quiz-card {
     border: 1px solid black;
     border-radius: 30px;
+    transition: .4s;
+}
+
+.quiz-card:hover {
+    transform: scale(1.1);
+    border: 2px solid black;
 }
 
 .easy {
@@ -59,16 +64,13 @@
 
 .medium {
     background-color: rgb(153, 179, 224);
-    
 }
 
 .hard {
     background-color: rgb(198, 134, 137);
-    
 }
 
 .random {
-    
     background: rgb(198, 133, 137);
     background: linear-gradient(270deg, rgba(198, 133, 137, 1) 0%, rgba(153, 179, 224, 1) 52%, rgba(167, 203, 137, 1) 100%);
 }
@@ -83,16 +85,26 @@
 section {
     text-align: center;
 }
+
 .answer {
-            color: black;
-            text-decoration: none;
-            padding: 80px 15px;
-            margin: 50px;
-            font-size: 1.3rem;
-            
-            text-align: center;
+    color: black;
+    text-decoration: none;
+    padding: 80px 15px;
+    margin: 50px;
+    font-size: 1.1rem;
+    border: 1px solid black;
+    border-radius: .7rem;
+    text-align: center;
+    width: 200px;
 }
 
+.correct {
+    background-color: green;
+}
+
+.wrong {
+    background-color: red;
+}
 
 
 
