--- a/CSS/memory/memory-style.css
+++ b/CSS/memory/memory-style.css
@@ -1,19 +1,25 @@
-body {
-  background: #333333;
+* {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
-
-.tiles {
-  margin: 48px auto;
-  width: max-content;
+body {
+  background-color: #f4c531;
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper-content {
+  background-color: #ffffff;
+  width: 26.87em;
+  padding: 2.5em 3em;
+  margin: 50vh 0em;
+  border-radius: 0.6em;
+  box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2); 
+}
+.game-container {
   display: grid;
-  grid-template-columns: repeat(4, 100px);
-  gap: 16px;
-}
-
-.tile {
-  height: 100px;
-  background: #111111;
-  border: 5px solid #444444;
-  cursor: pointer;
+  width: 100%;
 }
