--- a/CSS/character/character-style.css
+++ b/CSS/character/character-style.css
@@ -118,3 +118,8 @@
   border: 2px solid rgb(255, 255, 255);
   background-color: aliceblue;
 }
+
+.char-button{
+  padding: 0.5rem;
+  border: 1px solid;
+}
