--- a/CSS/memory/memory-style.css
+++ b/CSS/memory/memory-style.css
@@ -13,6 +13,7 @@ body {
 }
 .wrapper-content {
   background-color: #ffffff;
+  box-sizing: content-box;
   width: 26.87em;
   padding: 2.5em 3em;
   margin: 50vh 0em;
@@ -22,4 +23,43 @@ body {
 .game-container {
   display: grid;
   width: 100%;
+  gap: 0.6em;
+}
+.image {
+  width: 100px;
+  height: auto;
+}
+.card-container {
+  position: relative;
+  width: 6.25em;
+  height: 6.25em;
+  cursor: pointer;
+}
+.card-before, 
+.card-after {
+  position: absolute;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid #000000;
+  transition: transform 0.7s ease-out;
+  backface-visibility: hidden;
+}
+.card-before {
+  background-color: #f4c531;
+  font-size: 2.8em;
+  font-weight: 600;
+}
+.card-after {
+  background-color: #ffffff;
+  transform: rotateY(180deg);
+}
+.card-container.flipped.card-before {
+  transform: rotateY(180deg);
+}
+.card-container.flipped.card-after {
+  transform: rotateY(0deg);
 }
