--- a/CSS/memory/memory-style.css
+++ b/CSS/memory/memory-style.css
@@ -16,7 +16,7 @@ body {
   box-sizing: content-box;
   width: 26.87em;
   padding: 2.5em 3em;
-  margin: 50vh 0em;
+  margin: 10vh 0em;
   border-radius: 0.6em;
   box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2); 
 }
@@ -62,4 +62,36 @@ body {
 }
 .card-container.flipped.card-after {
   transform: rotateY(0deg);
+}
+.controls-container {
+  /* !BUG -footer disappears because of overlay- */
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: #f4c531;
+  z-index: 100;
+}
+button {
+  border: none;
+  border-radius: 0.3em;
+  padding: 1em 1.5em;
+  cursor: pointer;
+}
+#stop {
+  font-size: 1.1em;
+  display: block;
+  margin: 1.1em auto 0 auto;
+  background-color: #000000;
+  color: #ffffff;
+}
+.controls-container button {
+  font-size: 1.3em;
+  box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
+}
+.hide {
+  display: none;
 }
