--- a/CSS/memory/memory-style.css
+++ b/CSS/memory/memory-style.css
@@ -25,6 +25,13 @@ body {
   width: 100%;
   gap: 0.6em;
 }
+.stats-container {
+  text-align: right;
+  margin-bottom: 1.2em;
+}
+.stats-container span{
+  font-weight: 600;
+}
 .image {
   width: 100px;
   height: auto;
