added restart button

--- a/CSS/quiz/quiz-style.css
+++ b/CSS/quiz/quiz-style.css
@@ -133,7 +133,7 @@ section {
     background-color: red;
 }
 
-#next-question {
+#next-question, #restart-button {
     padding: 10px 20px;
     border: 1px solid black;
     border-radius: 8px;
