--- a/CSS/memory/memory-style.css
+++ b/CSS/memory/memory-style.css
@@ -64,10 +64,10 @@ body {
   background-color: #ffffff;
   transform: rotateY(180deg);
 }
-.card-container.flipped.card-before {
+.card-container.flipped .card-before {
   transform: rotateY(180deg);
 }
-.card-container.flipped.card-after {
+.card-container.flipped .card-after {
   transform: rotateY(0deg);
 }
 .controls-container {
@@ -101,4 +101,14 @@ button {
 }
 .hide {
   display: none;
+}
+#result {
+  text-align: center;
+}
+#resuøt h2 {
+  font-size: 2.5em;
+}
+#result h4 {
+  font-size: 1.8em;
+  margin: 0.6em 0 1em 0;
 }
