--- a/CSS/memory/memory-style.css
+++ b/CSS/memory/memory-style.css
@@ -62,7 +62,8 @@ body {
   backface-visibility: hidden;
 }
 .card-before {
-  background-color: #f4c531;
+  /*background-color: #f4c531;*/
+  background-color: #448067;
   font-size: 2.8em;
   font-weight: 600;
 }
@@ -108,7 +109,7 @@ button {
 }
 .controls-container button {
   font-size: 1.3em;
-  box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
+  box-shadow: 0 0.6em 2em rgba(0, 0, 0, 0.18);
 }
 .hide {
   display: none;
@@ -116,12 +117,34 @@ button {
 #result {
   text-align: center;
 }
-#resuøt h2 {
-  font-size: 2.5em;
+#result h2 {
+  font-size: 2em;
 }
 #result h4 {
-  font-size: 1.8em;
-  margin: 0.6em 0 1em 0;
+  font-size: 1.2em;
+  margin: 1em 0 0.4em 0;
+}
+.controls-container h1,
+.controls-container p {
+  margin: 0.5em;
+  text-align: center;
+}
+.controls-container h1 {
+  font-family: "Luckiest Guy", Arial, Helvetica, sans-serif;
+  font-size: 2.3em;
+  color: #262626;
+}
+.controls-container p {
+  font-family: "Lalezar", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+.unselectable {
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 @media screen and (max-width: 700px) {
@@ -138,7 +161,7 @@ button {
     height: auto;
   }
   #stop {
-    font-size: 1em;
+    font-size: 1.1em;
     margin: 1.1em auto 0 auto;
     padding: 0.7em 2.5em;
     border: 2px solid #000000;
@@ -146,5 +169,8 @@ button {
   .card-before, 
   .card-after {
     border: 3px solid #000000;
+  }
+  .stats-container {
+    font-size: 1em;
   }
 }
