--- a/CSS/memory/memory-style.css
+++ b/CSS/memory/memory-style.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   /* *font-family alters footer as well, NEEDS FIX */
 }
 body {
@@ -33,6 +32,7 @@ body {
   font-size: 1.1em;
 }
 .stats-container span{
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   font-weight: 600;
 }
 #time {
@@ -66,6 +66,7 @@ body {
   background-color: #448067;
   font-size: 2.8em;
   font-weight: 600;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 .card-after {
   background-color: #ffffff;
@@ -95,6 +96,7 @@ button {
   padding: 1em 1.5em;
   cursor: pointer;
   font-weight: 600;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 #stop {
   font-size: 1.3em;
@@ -106,6 +108,7 @@ button {
   border: 3px solid #000000;
   border-radius: 12px;
   font-weight: 700;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 .controls-container button {
   font-size: 1.3em;
@@ -146,7 +149,11 @@ button {
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
 }
+#moves-count, #time {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+}
 
+/* MEDIA QUERIES */
 @media screen and (max-width: 700px) {
   .wrapper-content {
     width: 20em;
