--- a/CSS/style.css
+++ b/CSS/style.css
@@ -115,6 +115,7 @@ header nav ul li:hover {
     grid-template-columns: 300px 300px;
     grid-template-rows: 300px 300px;
     padding: 2rem;
+    margin: 3rem;
 }
 
 .game{
